3rd draft - streamlined the models to work fast

--- a/sankalp_gupta_nn.ipynb
+++ b/sankalp_gupta_nn.ipynb
@@ -317,7 +317,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=blue> Step 5: </font> Build CNN Model"
+    "#### <font color=blue> Step 5: </font> Visualize Class imbalance or balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts = []\n",
+    "for c in class_names:\n",
+    "    class_dir  = pathlib.Path(train_path + '/' + c)\n",
+    "    class_count = len(list(class_dir.glob('*.jpg')))\n",
+    "    counts.append (class_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts = np.array (counts) * 100 / np.sum (counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Display % of data from each class\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "\n",
+    "plt.bar (class_names, counts)\n",
+    "plt.xticks (rotation=75)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <font color=blue> Step 6: </font> Build CNN Model"
    ]
   },
   {
@@ -426,7 +469,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=blue> Model 1: </font> 4 CNN layer blocks, each with 2 Conv layers and 1 Maxpool"
+    "##### <font color=blue> Model 1: </font> 4 Conv layers, 2 Maxpool, 1 Dense, 1 Output-Softmax Layer"
    ]
   },
   {
@@ -437,20 +480,13 @@
    "source": [
     "model = Sequential()\n",
     "model.add(Rescaling(1.0/255, input_shape=(180,180,3)))\n",
-    "model.add(Conv2D(filters = 32, kernel_size = (3,3), padding = 'Same', activation ='relu', input_shape = (180,180,3)))\n",
-    "model.add(Conv2D(filters = 32, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "\n",
-    "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
+    "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu', input_shape = (180,180,3)))\n",
     "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2,2)))\n",
     " \n",
     "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "\n",
-    "model.add(Conv2D(filters =256, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(Conv2D(filters =256, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "\n",
     "model.add(Flatten())\n",
@@ -504,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=blue> Model 2: </font> Added Batch Normalization after each Conv layer"
+    "##### <font color=blue> Model 2: </font> Added Batch Normalization after each Conv layer"
    ]
   },
   {
@@ -515,13 +551,8 @@
    "source": [
     "model = Sequential()\n",
     "model.add(Rescaling(1.0/255, input_shape=(180,180,3)))\n",
-    "model.add(Conv2D(filters = 32, kernel_size = (3,3), padding = 'Same', activation ='relu', input_shape = (180,180,3)))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Conv2D(filters = 32, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "\n",
-    "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
+    "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu', input_shape = (180,180,3)))\n",
     "model.add(BatchNormalization())\n",
     "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(BatchNormalization())\n",
@@ -530,12 +561,6 @@
     "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(BatchNormalization())\n",
     "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "\n",
-    "model.add(Conv2D(filters =256, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Conv2D(filters =256, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(BatchNormalization())\n",
     "model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "\n",
@@ -590,7 +615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=blue> Model 3: </font> Add Dropouts - to remove overfitting"
+    "##### <font color=blue> Model 3: </font> Add Dropouts - to remove overfitting"
    ]
   },
   {
@@ -601,30 +626,17 @@
    "source": [
     "model = Sequential()\n",
     "model.add(Rescaling(1.0/255, input_shape=(180,180,3)))\n",
-    "model.add(Conv2D(filters = 32, kernel_size = (3,3), padding = 'Same', activation ='relu', input_shape = (180,180,3)))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Conv2D(filters = 32, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
+    "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu', input_shape = (180,180,3)))\n",
     "model.add(BatchNormalization())\n",
     "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(BatchNormalization())\n",
     "model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "model.add(Dropout(0.25))\n",
-    " \n",
-    "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(filters =256, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
+    "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(BatchNormalization())\n",
-    "model.add(Conv2D(filters =256, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
+    "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(BatchNormalization())\n",
     "model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "model.add(Dropout(0.25))\n",
@@ -681,7 +693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=blue> Model 4: </font> Add LC2 regularizer"
+    "##### <font color=blue> Model 4: </font> Add LC2 regularizer"
    ]
   },
   {
@@ -692,36 +704,23 @@
    "source": [
     "model = Sequential()\n",
     "model.add(Rescaling(1.0/255, input_shape=(180,180,3)))\n",
-    "model.add(Conv2D(filters = 32, kernel_size = (3,3), padding = 'Same', activation ='relu', input_shape = (180,180,3)))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Conv2D(filters = 32, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
+    "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu', input_shape = (180,180,3)))\n",
     "model.add(BatchNormalization())\n",
     "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(BatchNormalization())\n",
     "model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "model.add(Dropout(0.25))\n",
-    " \n",
-    "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(filters =256, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
+    "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(BatchNormalization())\n",
-    "model.add(Conv2D(filters =256, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
+    "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(BatchNormalization())\n",
     "model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(512, kernel_regularizer=regularizers.L2(0.01)))\n",
+    "model.add(Dense(512, kernel_regularizer=L2(0.01)))\n",
     "model.add(Activation('relu'))\n",
     "model.add(Dropout(0.50))\n",
     "model.add(Dense(num_classes, activation = \"softmax\"))"
@@ -797,22 +796,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Todo: Write your findings after the model fit, see if there is an evidence of model overfit or underfit. Do you think there is some improvement now as compared to the previous model run?\n",
+    "<font color=blue> Todo: </font> Write your findings after the model fit, see if there is an evidence of model overfit or underfit. Do you think there is some improvement now as compared to the previous model run?\n",
     "Todo: Find the distribution of classes in the training dataset.\n",
-    "Context: Many times real life datasets can have class imbalance, one class can have proportionately higher number of samples compared to the others. Class imbalance can have a detrimental effect on the final model quality. Hence as a sanity check it becomes important to check what is the distribution of classes in the data.\n",
-    "## Your code goes here.\n",
-    "Todo: Write your findings here:\n",
-    "- Which class has the least number of samples?\n",
-    "- Which classes dominate the data in terms proportionate number of samples?\n",
-    "Todo: Rectify the class imbalance\n",
-    "Context: You can use a python package known as Augmentor (https://augmentor.readthedocs.io/en/master/) to add more samples across all classes so that none of the classes have very few samples."
+    "Context: Many times real life datasets can have class imbalance, one class can have proportionately higher number of samples compared to the others. Class imbalance can have a detrimental effect on the final model quality. Hence as a sanity check it becomes important to check what is the distribution of classes in the data."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=blue> Model 5: </font> Using Augmentor to create an enhanced dataset"
+    "##### <font color=blue> Model 5: </font> Using Augmentor to create an enhanced dataset"
    ]
   },
   {
@@ -831,17 +824,6 @@
    "outputs": [],
    "source": [
     "import Augmentor"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To use Augmentor, the following general procedure is followed:\n",
-    "\n",
-    "Instantiate a Pipeline object pointing to a directory containing your initial image data set.\n",
-    "Define a number of operations to perform on this data set using your Pipeline object.\n",
-    "Execute these operations by calling the Pipeline’s sample() method."
    ]
   },
   {
@@ -865,6 +847,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=blue> Note: </font> \n",
+    "To use Augmentor, the following general procedure is followed:\n",
+    "\n",
+    "Instantiate a Pipeline object pointing to a directory containing your initial image data set.\n",
+    "Define a number of operations to perform on this data set using your Pipeline object.\n",
+    "Execute these operations by calling the Pipeline’s sample() method."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -880,7 +874,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<font color=blue> Note: </font> \n",
     "Augmentor has stored the augmented images in the output sub-directory of each of the sub-directories of skin cancer types.. Lets take a look at total count of augmented images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=blue> Note: </font> \n",
+    "Lets see the distribution of augmented data after adding new images to the original training data."
    ]
   },
   {
@@ -889,23 +892,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "counts = []\n",
     "for c in class_names:\n",
-    "    f = pathlib.Path(train_path + '/' + c + '/output')\n",
-    "    image_count_train = len(list(f.glob('*.jpg')))\n",
-    "    print(c, image_count_train)"
+    "    class_dir1  = pathlib.Path(train_path + '/' + c)\n",
+    "    class_dir2  = pathlib.Path(train_path + '/' + c + '/output')\n",
+    "    class_count = len(list(class_dir1.glob('*.jpg'))) + len(list(class_dir2.glob('*.jpg')))\n",
+    "    counts.append (class_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts = np.array (counts) * 100 / np.sum (counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Display % of data from each class\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "\n",
+    "plt.bar (class_names, counts)\n",
+    "plt.xticks (rotation=75)\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets see the distribution of augmented data after adding new images to the original training data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "<font color=blue> Instructions: </font>\n",
     "So, now we have added 500 images to all the classes to maintain some class balance. We can add more images as we want to improve training process.\n",
     "\n",
     "Todo: Train the model on the data created using Augmentor"
@@ -951,30 +973,17 @@
    "source": [
     "model = Sequential()\n",
     "model.add(Rescaling(1.0/255, input_shape=(180,180,3)))\n",
-    "model.add(Conv2D(filters = 32, kernel_size = (3,3), padding = 'Same', activation ='relu', input_shape = (180,180,3)))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Conv2D(filters = 32, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
+    "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu', input_shape = (180,180,3)))\n",
     "model.add(BatchNormalization())\n",
     "model.add(Conv2D(filters = 64, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(BatchNormalization())\n",
     "model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "model.add(Dropout(0.25))\n",
-    " \n",
-    "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(filters =256, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
+    "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(BatchNormalization())\n",
-    "model.add(Conv2D(filters =256, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
+    "model.add(Conv2D(filters =128, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
     "model.add(BatchNormalization())\n",
     "model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "model.add(Dropout(0.25))\n",
@@ -1031,7 +1040,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=blue> Model 6: </font> Increase epochs to 50"
+    "##### <font color=blue> Model 6: </font> Increase epochs to 50"
    ]
   },
   {
