--- a/sankalp_gupta_nn.ipynb
+++ b/sankalp_gupta_nn.ipynb
@@ -37,6 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#This is required to clone the data files from github into google colab.\n",
+    "#This has to be executed everytime, as google colab runtime does not store data files, once the program session is removed\n",
     "!git clone https://github.com/sagupta153/melanoma_identification"
    ]
   },
@@ -46,6 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Verify the present working directory. This helps in setting the path for the image data files\n",
     "!pwd"
    ]
   },
@@ -55,16 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent_path = '/content/melanoma_identification'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parent_path = '.'"
+    "#This is the parent folder where the program and data files are stored. \n",
+    "parent_path = '/content/melanoma_identification'     #Use this when executing the program on google colab\n",
+    "#parent_path = '.'                                   #Use this when executing the program on local PC"
    ]
   },
   {
@@ -114,6 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Set the path where the image data files will be found\n",
     "data_path  = parent_path + '/melanomas'\n",
     "\n",
     "train_path = data_path + '/Train'\n",
@@ -126,6 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#This is just to ensure that the program does not crash in case the image files folder is not set properly\n",
     "def crete_dir_if_not_existing (f):\n",
     "    if not os.path.exists(f):\n",
     "        print ('Dir ' + f + ' does not exist. Creating one')\n",
@@ -152,6 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Initialise the path class corresponding to the path-string for image data files\n",
     "train_dir = pathlib.Path(train_path)\n",
     "test_dir  = pathlib.Path(test_path)"
    ]
@@ -162,6 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Count the number of image files\n",
     "image_count_train = len(list(train_dir.glob('*/*.jpg')))\n",
     "image_count_test  = len(list(test_dir.glob('*/*.jpg')))\n",
     "\n",
@@ -195,6 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#This keras utility is a convenient way of loading image files\n",
     "from tensorflow.keras.utils import image_dataset_from_directory"
    ]
   },
@@ -260,6 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Save all the class names in a list\n",
     "class_names = train_ds.class_names\n",
     "print(class_names)"
    ]
@@ -287,6 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Check the number of classes\n",
     "num_classes = len (class_names)\n",
     "num_classes"
    ]
@@ -297,6 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Display one image from each of the classes\n",
     "plt.figure(figsize=(16, 8))\n",
     "\n",
     "for i in range(num_classes):\n",
@@ -317,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=blue> Step 5: </font> Visualize Class imbalance or balance"
+    "#### <font color=blue> Step 5: </font> Visualize Class imbalance"
    ]
   },
   {
@@ -326,6 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Count the number of images in each class\n",
     "counts = []\n",
     "for c in class_names:\n",
     "    class_dir  = pathlib.Path(train_path + '/' + c)\n",
@@ -339,6 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Convert the counts to % value\n",
     "counts = np.array (counts) * 100 / np.sum (counts)"
    ]
   },
