--- a/sankalp_gupta_nn.ipynb
+++ b/sankalp_gupta_nn.ipynb
@@ -566,7 +566,7 @@
    "outputs": [],
    "source": [
     "#define a function to build the model\n",
-    "def get_model (bn=False, dropout=False, lc2=False):\n",
+    "def get_model (bn=False, dropout=False, lc2=False, features_256=False):\n",
     "    model = Sequential()\n",
     "    model.add(Rescaling(1.0/255, input_shape=(180,180,3)))\n",
     "\n",
@@ -583,6 +583,14 @@
     "    if bn: model.add(BatchNormalization());\n",
     "    model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "    if dropout: model.add(Dropout(0.25))\n",
+    "\n",
+    "    if features_256:\n",
+    "        model.add(Conv2D(filters =256, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
+    "        if bn: model.add(BatchNormalization());\n",
+    "        model.add(Conv2D(filters =256, kernel_size = (3,3), padding = 'Same', activation ='relu'))\n",
+    "        if bn: model.add(BatchNormalization());\n",
+    "        model.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "        if dropout: model.add(Dropout(0.25))\n",
     "\n",
     "    model.add(Flatten())\n",
     "    if lc2:\n",
@@ -814,6 +822,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=blue> 1. </font> Install and import Augmentor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -829,6 +844,13 @@
    "outputs": [],
    "source": [
     "import Augmentor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=blue> 2. </font> Remove 'output' folders created during any previous execution of this program "
    ]
   },
   {
@@ -849,6 +871,13 @@
     "                os.rmdir(os.path.join(root, name))\n",
     "    else:\n",
     "        print ('Dir ' + f + ' does not exist from previous program execution.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=blue> 3. </font> Create and execute Augmentor pipeline "
    ]
   },
   {
@@ -889,6 +918,13 @@
    "source": [
     "<font color=blue> Note: </font> \n",
     "Lets see the distribution of augmented data after adding new images to the original training data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=blue> 4. </font> Check class imbalance after augmentation"
    ]
   },
   {
@@ -939,6 +975,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=blue> 5. </font> Re-create Training and Validation datasets, including the newly created images"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -968,6 +1011,13 @@
     "    subset='validation',\n",
     "    image_size=(img_height, img_width),\n",
     "    batch_size=batch_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=blue> 6. </font> Build and Test the model "
    ]
   },
   {
@@ -1011,7 +1061,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <font color=blue> Model 6: </font> Increase epochs to 50"
+    "##### <font color=blue> Model 6: </font> Add an additional block for 256 features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Build the model\n",
+    "model = get_model(bn=True, dropout=True, lc2=True, features_256=True)\n",
+    "\n",
+    "#Compile the model\n",
+    "model.compile(loss='sparse_categorical_crossentropy', optimizer='sgd', metrics=['accuracy'])\n",
+    "\n",
+    "#View Model Summary\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Train the model\n",
+    "epochs = 30\n",
+    "history = model.fit(train_ds, validation_data=val_ds, epochs=epochs, batch_size=batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Visualize the model results\n",
+    "visualize_results (history, epochs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <font color=blue> Model 7: </font> Increase epochs to 50"
    ]
   },
   {
