--- a/sankalp_gupta_nn.ipynb
+++ b/sankalp_gupta_nn.ipynb
@@ -608,7 +608,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <font color=blue> Model 1: </font> 4 Conv layers, 2 Maxpool, 1 Dense, 1 Output-Softmax Layer"
+    "##### <font color=brown> Model 1: </font> 4 Conv layers, 2 Maxpool, 1 Dense, 1 Output-Softmax Layer"
    ]
   },
   {
@@ -652,7 +652,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <font color=blue> Model 2: </font> Added Batch Normalization after each Conv layer"
+    "##### <font color=brown> Model 2: </font> Added Batch Normalization after each Conv layer"
    ]
   },
   {
@@ -696,7 +696,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <font color=blue> Model 3: </font> Add Dropouts - to remove overfitting"
+    "##### <font color=brown> Model 3: </font> Add Dropouts - to remove overfitting"
    ]
   },
   {
@@ -740,7 +740,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <font color=blue> Model 4: </font> Add LC2 regularizer"
+    "##### <font color=brown> Model 4: </font> Add LC2 regularizer"
    ]
   },
   {
@@ -818,7 +818,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <font color=blue> Model 5: </font> Using Augmentor to create an enhanced dataset"
+    "##### <font color=brown> Model 5: </font> Using Augmentor to create an enhanced dataset"
    ]
   },
   {
@@ -1061,7 +1061,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <font color=blue> Model 6: </font> Add an additional block for 256 features"
+    "##### <font color=brown> Model 6: </font> Add an additional block for 256 features"
    ]
   },
   {
@@ -1105,7 +1105,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=blue> Step 6: </font> Evaluate the model on the test dataset"
+    "##### <font color=brown> Model 7: </font> The previous model with 50 epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Build the model\n",
+    "model = get_model(bn=True, dropout=True, lc2=True, features_256=True)\n",
+    "\n",
+    "#Compile the model\n",
+    "model.compile(loss='sparse_categorical_crossentropy', optimizer='sgd', metrics=['accuracy'])\n",
+    "\n",
+    "#View Model Summary\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Train the model\n",
+    "epochs = 50\n",
+    "history = model.fit(train_ds, validation_data=val_ds, epochs=epochs, batch_size=batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Visualize the model results\n",
+    "visualize_results (history, epochs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <font color=blue> Step 7: </font> Evaluate the model on the test dataset"
    ]
   },
   {
@@ -1117,8 +1161,6 @@
     "#Creating Validation Dataset - 20% of the images used for validation\n",
     "eval_ds = image_dataset_from_directory(\n",
     "    test_dir,\n",
-    "    labels      ='inferred',\n",
-    "    label_mode  = \"binary\",\n",
     "    class_names = class_names,\n",
     "    color_mode  =  'rgb',\n",
     "    batch_size  = batch_size, # not really applicable as I want to use the whole set?\n",
